<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_android_application_v1">Android Application (v1)</string>
    <string name="about_android_application_v2">Android Application (v2)</string>
    <string name="about_ben">Benjamin Uekermann</string>
    <string name="about_bladenight_link">https://www.k2bladenight.de/</string>
    <string name="about_more_info">More information</string>
    <string name="about_olivier">Olivier Croquette</string>
    <string name="about_server_application">Server Application</string>
    <string name="about_version">Version:</string>
    <string name="app_name">K2 Blade Night</string>
    <string name="app_name_dev">DEV K2 Blade Night</string>
    <string name="arrow_left">&lt;</string>
    <string name="arrow_no"></string>
    <string name="arrow_right">&gt;</string>
    <string name="button_action">Participate</string>
    <string name="button_addFriend">Add Friend</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">OK</string>
    <string name="button_confirmFriend">Confirm Friend</string>
    <string name="button_inviteFriend">Invite Friend</string>
    <string name="button_options">Options</string>
    <string name="button_participate">Participate</string>
    <string name="button_send">Send</string>
    <string name="button_social">Manage Friends</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_view">View</string>
    <string name="config_default_server_url"></string>
    <string name="course_east_short">East - short</string>
    <string name="course_east_long">East - long</string>
    <string name="course_family">Family</string>
    <string name="course_north_short">North - short</string>
    <string name="course_north_long">North - long</string>
    <string name="course_west_short">West - short</string>
    <string name="course_west_long">West - long</string>
    <string name="default_code">12 34 56</string>
    <string name="default_distance_rel">+234m</string>
    <string name="default_distance_tol">2384m</string>
    <string name="default_friend_name">Friend</string>
    <string name="default_name">Heinz</string>
    <string name="default_time">+01:24</string>
    <string name="field_active">Active</string>
    <string name="field_code">Code</string>
    <string name="field_color">Color</string>
    <string name="field_name">Nickname of your Friend</string>
    <string name="impressum">Impressum</string>
    <string name="help_text">This message explains the basic handling of the K2 Blade Night App. You can always review this message if you click on help in the context menu.\n\nThe K2 Blade Night App helps you to keep track of the progression of the K2 Blade Night, your position, and those of your friends. On the main page, you can overview all K2 Blade Night events by swiping horizontally. On the very day of an event, the traffic light in the middle shows you the event\'s status. So, you are updated as soon as possible if an K2 Blade Night gets confirmed or cancelled.\n\nOn the lower half of the screen, there are three buttons. The button on the left, showing a globe, allows you to overlook the circuit of the event on the map. If you press the button in the middle, showing a skater, you participate in the event. This is the main feature of this app. Your are forwarded to the map and you can start observing the progression of the event, as well as your and your friends\' positions. The tracking starts automatically, you can, however, also control it manually by clicking on the play/stop button located on the top bar. The participate button gets active 30 minutes before the start of the event.\n\nThe right button in the lower group, showing a diagram, let you review some statistics of past events (coming soon). You can add and manage friends if you click on the friends button, located on the very right of the top bar.</string>
    <string name="menu_settings">Settings</string>
    <string name="msg_administration">Administration</string>
    <string name="msg_about_app">About the app</string>
    <string name="msg_code_copied">The code has been copied to the clipboard</string>
    <string name="msg_code_not_valid">Code is not valid</string>
    <string name="msg_color_of_this_friend">Color of this friend</string>
    <string name="msg_failed_to_retrieve_position">Current position is unknown</string>
    <string name="msg_current_position_unknown">Current position is unknown</string>
    <string name="msg_failed_to_extract_map">Failed to extract the map</string>
    <string name="msg_feedback">Your feedback is welcome.\nSend us an email:\nocroquette@free.fr</string>
    <string name="msg_friend_active">activ</string>
    <string name="msg_friend_added">was added</string>
    <string name="msg_friend_removed">Friend has been removed</string>
    <string name="msg_invalid_friend_to_delete">This item cannot be deleted</string>
    <string name="msg_impressum">Betreiber und Veranstalter:\nGreen City Projekt GmbH Goethestraße 34 / Rgb.\n80336 München\nRegistergericht München HRB 148908\nhttp://www.greencity-projekt.de\nbladenight@greencity.de</string>
    <string name="msg_loading_code">Loading add-friend code</string>
    <string name="msg_locate">Centering view on me</string>
    <string name="msg_new_code">Give this code to</string>
    <string name="msg_no">No</string>
    <string name="msg_outdated_client">This version of the app is outdate. Please update it.</string>
    <string name="msg_participants">participants</string>
    <string name="msg_route_has_changed">The route has changed. We will now go for the route</string>
    <string name="msg_status">Status</string>
    <string name="msg_tracker_confirm_stop">Your friend will miss you, and track recording will stop. Are you sure ?</string>
    <string name="msg_tracking_running">Tracking is on</string>
    <string name="msg_validating_code">Validating friend code</string>
    <string name="msg_yes">Yes</string>
    <string name="name_head">HEAD</string>
    <string name="name_me">ME</string>
    <string name="name_tail">TAIL</string>
    <string name="social_explanation">To add a friend, you have to use a code. If you want to invite a friend, press \'Invite Friend\' and we will generate a code for you. If a friend gave you a code, press \'Confirm Friend\'.</string>
    <string name="social_ask_for_name">Give a name to this friend</string>
    <string name="social_live_legend_name"><u>LIVE DATA</u></string>
    <string name="status_active">active</string>
    <string name="status_inactive">inactive</string>
    <string name="status_obsolete">obsolete</string>
    <string name="status_pending">pending</string>
    <string name="text_friend_delete">Do you really want to delete </string>
    <string name="title_about">About this application</string>
    <string name="title_admin">Admin</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_friend_add">Add Friend</string>
    <string name="title_friend_change">Edit Friend</string>
    <string name="title_friend_confirm">Confirm Friend</string>
    <string name="title_friend_delete">Delete Friend</string>
    <string name="title_friend_invite">Invite Friend</string>
    <string name="title_help">Help</string>
    <string name="title_impressum">Impressum</string>
    <string name="title_map_default">Preview</string>
    <string name="title_map_live">Live</string>
    <string name="title_options">Options</string>
    <string name="title_selection">Events</string>
    <string name="title_social">Social</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="word_active_trackers">Trackers</string>
    <string name="word_route">Route</string>
    <string name="word_date">Date</string>
    <string name="msg_failed_to_load_map">Failed to extract map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_main">K2 Blade Night</string>
    <string name="text_next_event">Next event:</string>
    <string name="text_route_name">Route name</string>
    <string name="event_date">Event date</string>
    <string name="status_confirmed">confirmed</string>
    <string name="status_cancelled">cancelled</string>
    <string name="title_activity_table">TableActivity</string>
</resources>
