<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_friend"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >

    <TextView
        android:id="@+id/lbl_friends_name" android:text="@string/social_explanation" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:padding="5dp" />
      
    <LinearLayout
            android:id="@+id/social_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5"  >   
            
            <Button
                android:id="@+id/addFriend"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_inviteFriend" 
                android:onClick="onClick"/>
    
            <Button
                android:id="@+id/confirmFriend"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/button_confirmFriend" 
                android:onClick="onClick"/>  
        
        
       
        
    </LinearLayout>
</LinearLayout>