<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:onClick="onClick"
    android:orientation="vertical"
    android:tag="empty" >

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textColor="@color/bn_white"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/route_name"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textColor="@color/bn_white"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/number_participants"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.3"
        android:gravity="center"
        android:textColor="@color/bn_white"
        android:textIsSelectable="false"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2.0" >

        <TextView
            android:id="@+id/arrow_left"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="fill_vertical|center"
            android:text="@string/arrow_left"
            android:textColor="@color/bn_green"
            android:textScaleX="0.3"
            android:textSize="120sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/msg_status"
            android:gravity="center_vertical"
            android:paddingTop="10dip" />

        <TextView
            android:id="@+id/arrow_right"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="fill_vertical|center"
            android:text="@string/arrow_right"
            android:textColor="@color/bn_green"
            android:textScaleX="0.3"
            android:textSize="120sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_marginTop="10dp"
        android:layout_weight="1.0"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_event_observe"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/button_view"
            android:gravity="center_vertical"
            android:paddingTop="10dip"
            android:src="@drawable/ic_action_globe" />

        <ImageView
            android:id="@+id/image_event_participate"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/button_participate"
            android:gravity="center_vertical"
            android:paddingTop="10dip"
            android:src="@drawable/skater" />

        <ImageView
            android:id="@+id/image_event_statistics"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/button_statistics"
            android:gravity="center_vertical"
            android:paddingTop="10dip"
            android:src="@drawable/ic_action_bargraph" />
    </LinearLayout>

</LinearLayout>