<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="4dp" 
         />
    
    <LinearLayout
        android:id="@+id/group_low"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"  >

        <LinearLayout
	        android:id="@+id/group_navigate"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1"  >   
	        
	        <Button
	            android:id="@+id/last"
	            android:layout_weight="1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="Last" 
	            android:onClick="onClick"/>
	
	        <Button
	            android:id="@+id/go_in"
	            android:layout_weight="1"
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:text="@string/button_action" 
	            android:onClick="onClick"/>    
	            
	        <Button
	            android:id="@+id/next"
	            android:layout_weight="1"
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:text="Next" 
	            android:onClick="onClick"/>    
    	</LinearLayout>
    	
        <LinearLayout
	        android:id="@+id/group_options"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1"  >   
	        
		    <Button
	            android:id="@+id/social"
	            android:layout_weight="1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="@string/button_social" 
	            android:onClick="onClick"/>
	
	        <Button
	            android:id="@+id/options"
	            android:layout_weight="1"
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:text="@string/button_options" 
	            android:onClick="onClick"/>  
    	</LinearLayout>
        
       
        
    </LinearLayout>

    

</LinearLayout> 