<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.greencity.bladenightapp.android.mainactivity.MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="50dp">

        <com.markupartist.android.widget.ActionBar
            android:id="@+id/actionbar"
            style="@style/ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <WebView
            android:id="@+id/main_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionbar">
            app:layout_marginBottom="100dp"</WebView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_next_event"
            android:textColor="@color/bn_white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/route_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_webview"></TextView>


        <TextView
            android:id="@+id/route_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_route_name"
            android:textColor="@color/bn_white"
            android:textIsSelectable="false"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/event_date"
            android:textColor="@color/bn_white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/status"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/route_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/route_name"></TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="Status"
            android:textColor="@color/bn_white"
            android:textIsSelectable="false"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"></TextView>

        <!--
            -->

    </android.support.constraint.ConstraintLayout>
</ScrollView>